--- a/users/login-ui/css/main.css
+++ b/users/login-ui/css/main.css
@@ -164,7 +164,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: #3F1651;
+  background: #6f567a;
 }
 
 .wrap-login100 {
